# BlockchainFlask

./: .replit  Makefile  README.md  app.py  blockchain.db  blockchain_app.py  blockchainv3.py  cacert.pem  cakey.pem  cli.py  index.html  main.cpp  main.moc  main.py  peer_store.db  phttp.py  play.py  pyproject.toml  replit.md  requirements.txt  test2.py
app/: __init__.py  routes.py  socketio_events.py
app/static/css/: style.css
app/static/js/: admin.js  main.js
app/templates/: admin.html  index.html  index2.html
attached_assets/: blockchain.py  blockchain2_1752248823814.py  p2pnetworking2_1752248823896.py
calculator/: app.py  calc.py
calculator/templates/: calc.html  index.html
core/: __init__.py  block_ops.py  config.py  crypto.py  database.py  transactions.py  utils.py  wallet.py
network/: __init__.py  health.py  mempool_keys.py  messaging.py  network_manager.py  nodes.py  reputation.py  ssl_utils.py
